# Todo

./: CMakeLists.txt  README.md  main.cpp
auth/: AuthHandle.cpp  AuthHandle.h  auth_routes.cpp  auth_routes.h  user.h
database/: db_functions.cpp  db_functions.h
frontend/: page4.html  script.js  style.css
models/: task.cpp  task.hpp
routes/: crow_routes.cpp  crow_routes.h
utilities/: readFile.cpp  readFile.h
